# sedds_analysis

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/: sedds_df.csv
models/: multi_output_model.pkl  progressed_model.pkl
notebooks/tasks/: 1_data_analysis_and_preproccesing.ipynb  2_exploratory_analysis_multioutput_regression.ipynb  3_exploratory_analysis_target_progressed.ipynb  4_exploratory_analysis_pdi.ipynb  5_exploratory_analysis_size.ipynb
notebooks/tasks/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/tasks/catboost_info/learn/: events.out.tfevents
notebooks/tasks/catboost_info/test/: events.out.tfevents
src/app/: main.py
src/modules/types/: constants_api.py  constants_sedds.py
src/modules/utils/: data_utils.py  load_model.py  plot_utils.py
