[tool.poetry]
name = "sedds-analysis"
version = "0.1.0"
description = ""
authors = ["nikapotato <sokol.nikolka@gmail.com>"]
readme = "README.md"

packages = [
       { include = "modules", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
polars = "^0.20.23"
ipykernel = "^6.29.4"
uvicorn = "^0.29.0"
seaborn = "^0.13.2"
matplotlib = "^3.8.4"
pyarrow = "^16.0.0"
numpy = "^1.26.4"
catboost = "^1.2.5"
scikit-learn = "^1.4.2"
xgboost = "^2.0.3"
rfpimp = "^1.3.7"
setuptools = "^69.5.1"
ipywidgets = "^8.1.2"
statsmodels = "^0.14.2"
pickle-mixin = "^1.0.2"
pydantic = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
